wubi (9.04) UNRELEASED; urgency=low

  [ Agostino Russo ]
  * Initial revision
  * Hello world, we have a window showing
  * Fixed loop on quit
  * Fixed tools
  * Added logging support
  * Reorganized commandline arguments
  * Improved progress object
  * Added data dir
  * Added win32 wizard base page class
  * Added mappings
  * Initial win32 page layout
  * Using basic window as panel
  * Refactored shared_backend.py into common/backend.py & friends
  * Added metalink parser
  * Removed testing metalink code
  * Added progress page
  * Improved quit mechanism
  * Added tasklist as a more general replacement of the progress object
  * Revised tool scripts

  [ Hampus Wessman ]
  * Added a new metalink parser
  * Fixed the check for wine so that it looks in additonal places
  * Added tools/wine to the branch

  [ Agostino Russo ]
  * Added windows system info detection
  * Added installation page (partially implemented)
  * Minor GUI layout changes
  * Added installation finish page
  * Modified code to support Python 2.3 (for licensing and size reasons)
  * Added bittornado source importer
  * Added ipython setup
  * Bumped version to 9.04
  * Added required binaries (will be compiled at a later stage)
  * Added uninstallation page
  * Added pylauncher
  * Added BitTorrent source
  * Added documentation and licenses
  * Connected download managers
  * Fixed download status updates
  * Added more information to the README
  * Made the tasklist thread daemonic so that it does not prevent the
    main application from quitting
  * Reformatted the README file
  * Modified urlgrabber to make the download terminate if so
    instructed by the controlling thread via the update callback
  * Improved the tasklist module to allow for nested backend jobs
  * Refined tasklist

 -- Agostino Russo <agostino.russo@gmail.com>  Wed, 31 Dec 2008 09:42:56 +0000