@@ -50,5 +50,9 @@ wubi (9.04) UNRELEASED; urgency=low
     instructed by the controlling thread via the update callback
   * Improved the tasklist module to allow for nested backend jobs
   * Refined tasklist
+  * Added a stubs for username and timezone
+  * Fixed installation finsih page, since reboot was executed before
+    showing the page
+  * Added cd menu page, to be completed
 
- -- Agostino Russo <agostino.russo@gmail.com>  Wed, 31 Dec 2008 09:42:56 +0000
+ -- Agostino Russo <agostino.russo@gmail.com>  Fri, 02 Jan 2009 09:58:51 +0000
